# manim-devanagari

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
example/: Example_1.ipynb  Example_2.ipynb  Test.py  example.ipynb  example_1.py  example_2.py  example_3.py
manim_devanagari/: __init__.py  __main__.py  devanagari.tex  helper.py  notebook.py
src/manim_devangari/: __main__.py
