[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "manim_devanagari"
authors = [{ name = "AvN Learn", email = "avnlearn@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
dependencies= [
    "manim"
]
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/avnlearn/manim-devanagari.git"
